5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1635_2443.log
== SUBMITION (2019-04-09 22:13:52) 
-- CODE:
import math

r = float(input("Raio: "))
x = float(input("Altura da coluna de ar na parte superior do tanque: "))
opcao = int(input("Opcao (1 - volume de ar / 2 - volume de combustivel): "))

ve = (4 * math.pi * (r ** 3)) / 3
vce = (math.pi * (x ** 2) * ((3 * r) - x)) / 3

if(opcao == 1):
	print(round(vce, 4))
else:
	print(round(ve - vce, 4))
-- EXECUTION TIME:
0.19455
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:11:55) 
-- CODE:
from math import*

r = float(input("Qual o raio? "))
h = float(input("Qual a altura da coluna? "))
x = int(input("1/2"))

v1 = 4*pi*r**3/ 3
v2 = ((pi*(x**2) * (3*r - x))/ 3

if(x == 1):
	print(round(v2, 4))
else:
	print(round(v2 - v1, 4))
-- ERROR:
File "XXXX", line 10
    if(x == 1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:14:01) 
-- CODE:
import math

r = float(input("Raio: "))
x = float(input("Altura da coluna de ar na parte superior do tanque: "))
opcao = int(input("Opcao (1 - volume de ar / 2 - volume de combustivel): "))

ve = (4 * math.pi * (r ** 3)) / 3
vce = (math.pi * (x ** 2) * ((3 * r) - x)) / 3

if(opcao == 1):
	print(round(vce, 4))
else:
	print(round(ve - vce, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:14:15) 
-- CODE:
import math

r = float(input("Raio: "))
x = float(input("Altura da coluna de ar na parte superior do tanque: "))
opcao = int(input("Opcao (1 - volume de ar / 2 - volume de combustivel): "))

ve = (4 * math.pi * (r ** 3)) / 3
vce = (math.pi * (x ** 2) * ((3 * r) - x)) / 3

if(opcao == 1):
	print(round(vce, 4))
else:
	print(round(ve - vce, 4))
-- EXECUTION TIME:
0.164499
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
